QUAL-101 : Updated qual.service

--- a/src/qual.service
+++ b/src/qual.service
@@ -4,6 +4,7 @@ Description=Start QUAL simulators and QTA
 [Service]
 Type=idle
 ExecStart=/thales/qual/src/qual.sh
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
