--- a/src/qual.service
+++ b/src/qual.service
@@ -5,6 +5,7 @@ Description=Start QUAL simulators and QTA
 Type=idle
 ExecStart=/thales/qual/src/qual.sh
 Restart=always
+RestartSec=3s
 
 [Install]
 WantedBy=multi-user.target
