QUAL-142 : Working on syntax specifics

--- a/src/common/configurableObject/unitTest.ini
+++ b/src/common/configurableObject/unitTest.ini
@@ -7,3 +7,11 @@ string1 = Goodbye
 float1 = 7
 bool2 = True
 bool3 = 1
+
+
+[test_customConfig]
+int1 = 43
+string1 = Hello World!
+float1 = 7.1
+bool2 = True
+bool3 = 1
