--- a/src/qual/config/virtualMachine.ini
+++ b/src/qual/config/virtualMachine.ini
@@ -1,17 +1,12 @@
-[DEFAULT]
-MYBOOL = yes
-
 [QTA]
 gpb_service_address=tcp://192.168.1.4:50001
 json_service_address=tcp://192.168.1.4:50002
 
 [Ethernet]
-server = 'www.yahoo.com'
-bandwidth = 0.5
-retries = 5
-newBool = false
-notAValue = foobar
-myBool2 = yes
+port=/dev/ttyUSB1
+baudrate=115200
+parity=none
+stopbits=1
 
 [HDAudio]
 audio_file_dir=qual/modules/hdAudio/HDAudio
