QUAL-142 move getConfigurations to configurableObject base class

--- a/src/common/configurableObject/unitTest.ini
+++ b/src/common/configurableObject/unitTest.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 bool1 = yes
 
-[testObject1]
+[TestObject1]
 int1 = 42
 string1 = Goodbye
 float1 = 7
@@ -11,6 +11,21 @@ bool3 = 1
 
 [test_customConfig]
 int1 = 43
+string1 = Hello World!
+float1 = 7.1
+bool2 = True
+bool3 = 1
+
+
+[test_multi1]
+int1 = 44
+string1 = Hello World!
+float1 = 7.1
+bool2 = True
+bool3 = 1
+
+[test_multi2]
+int1 = 45
 string1 = Hello World!
 float1 = 7.1
 bool2 = True
