QUAL-142 : Update all modules to use ConfigurableObject

--- a/src/qual/config/virtualMachine.ini
+++ b/src/qual/config/virtualMachine.ini
@@ -1,12 +1,20 @@
-[QTA]
-gpb_service_address=tcp://192.168.1.4:50001
-json_service_address=tcp://192.168.1.4:50002
 
-[Ethernet]
-port=/dev/ttyUSB1
-baudrate=115200
-parity=none
-stopbits=1
+[Rs232]
+;port = /dev/ttyUSB1
+;baudrate = 115200
+;parity = N
+;stopbits = 1
+;bytesize = 8
 
-[HDAudio]
-audio_file_dir=qual/modules/hdAudio/HDAudio
+[MemoryBandwidth]
+;maxallocmem= -M 10000000
+;numthreads= -P 1
+;mSize= -s 1000000
+
+[Rs485]
+;port = /dev/ttyUSB4
+;baudrate = 115200
+;parity = N
+;stopbits = 1
+;bytesize = 8
+;timeout = 3
