--- a/src/qual-vm.service
+++ b/src/qual-vm.service
@@ -3,7 +3,7 @@ Description=Start QUAL simulators and QTA
 
 [Service]
 Type=idle
-ExecStart=/bin/sh /thales/qual/src/qual.sh
+ExecStart=/bin/sh /thales/qual/src/qual-vm.sh
 Restart=always
 RestartSec=3s
 
