QUAL-171: Added audioFilePath config option; auto-select audio device

--- a/src/qual/config/virtualMachine.ini
+++ b/src/qual/config/virtualMachine.ini
@@ -1,15 +1,18 @@
 
+[HDAudio]
+;audioFilePath = qual/modules/hdAudio/HDAudio
+
+[MemoryBandwidth]
+;maxallocmem= -M 10000000
+;numthreads= -P 1
+;mSize= -s 1000000
+
 [Rs232]
 ;port = /dev/ttyUSB1
 ;baudrate = 115200
 ;parity = N
 ;stopbits = 1
 ;bytesize = 8
-
-[MemoryBandwidth]
-;maxallocmem= -M 10000000
-;numthreads= -P 1
-;mSize= -s 1000000
 
 [Rs485]
 ;port = /dev/ttyUSB4
