QUAL-172 : Configuring the logger from configurableObject

--- a/src/qual/config/virtualMachine.ini
+++ b/src/qual/config/virtualMachine.ini
@@ -1,20 +1,28 @@
+[DEFAULT]
+logLevel = 40
+syslogAddress = localhost
+syslogPort = 514
+syslogTCP = no
+
+
+[Test1]
 
 [Rs232]
-;port = /dev/ttyUSB1
-;baudrate = 115200
-;parity = N
-;stopbits = 1
-;bytesize = 8
+port = /dev/ttyUSB1
+baudrate = 115200
+parity = N
+stopbits = 1
+bytesize = 8
 
 [MemoryBandwidth]
-;maxallocmem= -M 10000000
-;numthreads= -P 1
-;mSize= -s 1000000
+axallocmem= -M 10000000
+numthreads= -P 1
+mSize= -s 1000000
 
 [Rs485]
-;port = /dev/ttyUSB4
-;baudrate = 115200
-;parity = N
-;stopbits = 1
-;bytesize = 8
-;timeout = 3
+port = /dev/ttyUSB4
+baudrate = 115200
+parity = N
+stopbits = 1
+bytesize = 8
+timeout = 3
