QUAL-171: Make QTA a ConfigurableObject and config server addresses

--- a/src/qual/config/virtualMachine.ini
+++ b/src/qual/config/virtualMachine.ini
@@ -1,4 +1,8 @@
 
+[QualTestApp]
+;gpbServiceAddress = tcp://*:50001
+;jsonServiceAddress = tcp://*:50002
+
 [HDAudio]
 ;audioFilePath = qual/modules/hdAudio/HDAudio
 
