QUAL-171: Made channel names configurable; updated to latest GPB def

--- a/src/qual/config/virtualMachine.ini
+++ b/src/qual/config/virtualMachine.ini
@@ -3,6 +3,20 @@
 ;gpbServiceAddress = tcp://*:50001
 ;jsonServiceAddress = tcp://*:50002
 
+[ARINC429]
+;tx1Channel = tx00
+;tx2Channel = tx10
+;tx3Channel = tx20
+;tx4Channel = tx30
+;rx1Channel = rx00
+;rx2Channel = rx01
+;rx3Channel = rx10
+;rx4Channel = rx11
+;rx5Channel = rx20
+;rx6Channel = rx21
+;rx7Channel = rx30
+;rx8Channel = rx31
+
 [HDAudio]
 ;audioFilePath = qual/modules/hdAudio/HDAudio
 
