Re-comment out things that are the defaults in ini file

--- a/src/qual/config/virtualMachine.ini
+++ b/src/qual/config/virtualMachine.ini
@@ -1,26 +1,26 @@
 [DEFAULT]
-logLevel = 20
-syslogAddress = localhost
-syslogPort = 514
-syslogProtocol = udp
+;logLevel = 20
+;syslogAddress = localhost
+;syslogPort = 514
+;syslogProtocol = udp
 
 
 [Rs232]
-port = /dev/ttyUSB1
-baudrate = 115200
-parity = N
-stopbits = 1
-bytesize = 8
+;port = /dev/ttyUSB1
+;baudrate = 115200
+;parity = N
+;stopbits = 1
+;bytesize = 8
 
 [MemoryBandwidth]
-axallocmem= -M 10000000
-numthreads= -P 1
-mSize= -s 1000000
+;axallocmem= -M 10000000
+;numthreads= -P 1
+;mSize= -s 1000000
 
 [Rs485]
-port = /dev/ttyUSB4
-baudrate = 115200
-parity = N
-stopbits = 1
-bytesize = 8
-timeout = 3
+;port = /dev/ttyUSB4
+;baudrate = 115200
+;parity = N
+;stopbits = 1
+;bytesize = 8
+;timeout = 3
