--- a/src/qual/config/mps.ini
+++ b/src/qual/config/mps.ini
@@ -1,1 +1,47 @@
+[DEFAULT]
+;logLevel = 20
+;syslogAddress = localhost
+;syslogPort = 514
+;syslogProtocol = udp
 
+
+[QualTestApp]
+;gpbServiceAddress = tcp://*:50001
+;jsonServiceAddress = tcp://*:50002
+
+[ARINC429]
+;tx1Channel = tx00
+;tx2Channel = tx10
+;tx3Channel = tx20
+;tx4Channel = tx30
+;rx1Channel = rx00
+;rx2Channel = rx01
+;rx3Channel = rx10
+;rx4Channel = rx11
+;rx5Channel = rx20
+;rx6Channel = rx21
+;rx7Channel = rx30
+;rx8Channel = rx31
+
+[HDAudio]
+;audioFilePath = qual/modules/hdAudio/HDAudio
+
+[MemoryBandwidth]
+;maxallocmem= -M 10000000
+;numthreads= -P 1
+;mSize= -s 1000000
+
+[Rs232]
+port = /dev/ttyRS232
+;baudrate = 115200
+;parity = N
+;stopbits = 1
+;bytesize = 8
+
+[Rs485]
+port = /dev/ttyRS485
+;baudrate = 115200
+;parity = N
+;stopbits = 1
+;bytesize = 8
+;timeout = 3
