--- a/src/simulator/qual-vm.service
+++ b/src/simulator/qual-vm.service
@@ -4,6 +4,7 @@ Description=Start QUAL simulators
 [Service]
 Type=idle
 ExecStart=/bin/qual-vm.sh
+RemainAfterExit=yes
 Restart=always
 RestartSec=3s
 
