QUAL-181: Implemented CarrierCardData module

--- a/src/qual/config/virtualMachine.ini
+++ b/src/qual/config/virtualMachine.ini
@@ -23,6 +23,9 @@
 ;rx7Channel = rx30
 ;rx8Channel = rx31
 
+[CarrierCardData]
+;ethDevice = TEST_FILE
+
 [HDAudio]
 ;audioFilePath = qual/modules/hdAudio/HDAudio
 
