--- a/src/qual/config/mps.ini
+++ b/src/qual/config/mps.ini
@@ -23,6 +23,9 @@
 ;rx7Channel = rx30
 ;rx8Channel = rx31
 
+[CarrierCardData]
+ethDevice = enp2s0f0
+
 [HDAudio]
 ;audioFilePath = qual/modules/hdAudio/HDAudio
 
