--- a/src/qual/config/mps.ini
+++ b/src/qual/config/mps.ini
@@ -24,7 +24,7 @@
 ;rx8Channel = rx31
 
 [CarrierCardData]
-ethDevice = enp2s0f0
+ethDevice = ens1f0
 
 [HDAudio]
 ;audioFilePath = qual/modules/hdAudio/HDAudio
