QUAL-209 Added local echo to RS-485. Default value is False, but in the configuration file is set to True.

--- a/src/qual/config/virtualMachine.ini
+++ b/src/qual/config/virtualMachine.ini
@@ -42,12 +42,13 @@
 ;bytesize = 8
 
 [Rs485]
-;port = /dev/ttyUSB4
+port = /dev/ttyUSB1
 ;baudrate = 115200
 ;parity = N
 ;stopbits = 1
 ;bytesize = 8
 ;timeout = 3
+localecho = True
 
 [SSD]
 partitonsize=20
