QUAL-210 : Updated ethernet module to allow configurable throttling

--- a/src/qual/config/mps.ini
+++ b/src/qual/config/mps.ini
@@ -26,6 +26,9 @@
 [CarrierCardData]
 ;ethDevice = ens1f0
 
+[Ethernet]
+bandwidthSpeed = 100
+
 [HDAudio]
 ;audioFilePath = qual/modules/hdAudio/HDAudio
 
