--- a/src/qual/config/virtualMachine.ini
+++ b/src/qual/config/virtualMachine.ini
@@ -26,6 +26,9 @@
 [CarrierCardData]
 ;ethDevice = TEST_FILE
 
+[Ethernet]
+;bandwidthSpeed = 100
+
 [HDAudio]
 ;audioFilePath = qual/modules/hdAudio/HDAudio
 
