Message delay commented

--- a/src/qual/config/mps.ini
+++ b/src/qual/config/mps.ini
@@ -53,7 +53,7 @@ port = /dev/ttyRS485
 ;bytesize = 8
 ;timeout = 3
 localecho = True
-messagedelay = 1
+;messagedelay = 1
 
 [SSD]
 ;partitonsize=500
