--- a/src/qual/config/virtualMachine.ini
+++ b/src/qual/config/virtualMachine.ini
@@ -29,6 +29,9 @@
 [Ethernet]
 ;bandwidthSpeed = 100
 
+[GPIO]
+logLevel = Debug
+
 [HDAudio]
 logLevel = Debug
 ;audioFilePath = qual/modules/hdAudio/HDAudio
