--- a/src/qual/config/virtualMachine.ini
+++ b/src/qual/config/virtualMachine.ini
@@ -23,6 +23,12 @@
 ;rx7Channel = rx30
 ;rx8Channel = rx31
 
+[ARINC485]
+;baudrate = 9600
+;parity = N
+;stopbits = 1
+;bytesize = 8
+
 [CarrierCardData]
 ;ethDevice = TEST_FILE
 
