--- a/src/systemd/qual-ife.service
+++ b/src/systemd/qual-ife.service
@@ -1,9 +1,9 @@
 [Unit]
-Description=Start QUAL service which starts the QTA
+Description=Starts Guest-VM for IFE communication
 
 [Service]
 Type=idle
-ExecStart=/bin/qual.sh
+ExecStart=/thales/host/appliances/qual-ife
 Restart=always
 RestartSec=3s
 
