QUAL-247: Make QTA's module dir configurable

--- a/src/qual/config/mps.ini
+++ b/src/qual/config/mps.ini
@@ -8,6 +8,7 @@
 [QualTestApp]
 ;gpbServiceAddress = tcp://*:50001
 ;jsonServiceAddress = tcp://*:50002
+;moduleDir = qual.modules
 
 [ARINC429]
 ;tx1Channel = tx00
