QUAL-247 : Updated config files

--- a/src/qual/config/virtualMachine.ini
+++ b/src/qual/config/virtualMachine.ini
@@ -3,6 +3,7 @@
 ;syslogAddress = localhost
 ;syslogPort = 514
 ;syslogProtocol = udp
+ifeTcpPort = 50003
 
 
 [QualTestApp]
@@ -23,12 +24,6 @@
 ;rx6Channel = rx21
 ;rx7Channel = rx30
 ;rx8Channel = rx31
-
-[ARINC485]
-;baudrate = 9600
-;parity = N
-;stopbits = 1
-;bytesize = 8
 
 [CarrierCardData]
 ;ethDevice = TEST_FILE
