QUAL-247 : Fixed config file

--- a/src/qual/config/ife.ini
+++ b/src/qual/config/ife.ini
@@ -6,8 +6,8 @@
 
 
 [QualTestApp]
-;gpbServiceAddress = tcp://*:50003
-;jsonServiceAddress = tcp://*:50004
+gpbServiceAddress = tcp://*:50003
+;jsonServiceAddress = tcp://*:50002
 
 [ARINC485]
 ;baudrate = 9600
