QUAL-247 : Changed ife VM QTA config option from port to address

--- a/src/qual/config/ife.ini
+++ b/src/qual/config/ife.ini
@@ -7,7 +7,7 @@
 
 [QualTestApp]
 gpbServiceAddress = tcp://*:50003
-;jsonServiceAddress = tcp://*:50002
+jsonServiceAddress = tcp://*:50004
 
 [ARINC485]
 ;baudrate = 9600
