--- a/src/qual/config/virtualMachine.ini
+++ b/src/qual/config/virtualMachine.ini
@@ -3,7 +3,7 @@
 ;syslogAddress = localhost
 ;syslogPort = 514
 ;syslogProtocol = udp
-;ifeTcpPort = 50003
+;ifeVmQtaAddr = tcp://localhost:50003
 
 
 [QualTestApp]
