--- a/src/qual/config/virtualMachine.ini
+++ b/src/qual/config/virtualMachine.ini
@@ -3,7 +3,7 @@
 ;syslogAddress = localhost
 ;syslogPort = 514
 ;syslogProtocol = udp
-;ifeVmQtaAddr = tcp://localhost:50003
+ifeVmQtaAddr = tcp://192.168.122.2:50003
 
 
 [QualTestApp]
