QUAL-248: Use the correct moduleDir in the IFE QTA

--- a/src/qual/config/ife.ini
+++ b/src/qual/config/ife.ini
@@ -8,6 +8,7 @@
 [QualTestApp]
 gpbServiceAddress = tcp://*:50003
 jsonServiceAddress = tcp://*:50004
+moduleDir = qual.ifeModules
 
 [ARINC485]
 ;baudrate = 9600
