QUAL-248: Enable UDP syslog; try again to fix libvirt default network

--- a/src/qual/config/ife.ini
+++ b/src/qual/config/ife.ini
@@ -1,8 +1,8 @@
 [DEFAULT]
 ;logLevel = Info
-;syslogAddress = localhost
-;syslogPort = 514
-;syslogProtocol = udp
+syslogAddress = 192.168.122.1
+syslogPort = 514
+syslogProtocol = udp
 
 
 [QualTestApp]
