QUAL-242: Make port 8 device configurable for testing

--- a/src/qual/config/sims.ini
+++ b/src/qual/config/sims.ini
@@ -29,6 +29,7 @@ ifeVmQtaAddr = tcp://192.168.122.2:50003
 ;ethDevice = TEST_FILE
 
 [Ethernet]
+port8Device = enp2s0f0
 ;bandwidthSpeed = 100
 
 [HDAudio]
