--- a/src/qual/config/mps.ini
+++ b/src/qual/config/mps.ini
@@ -29,6 +29,7 @@ ifeVmQtaAddr = tcp://192.168.122.2:50003
 ;ethDevice = ens1f0
 
 [Ethernet]
+;port8Device = eno1
 ;bandwidthSpeed = 100
 
 [HDAudio]
