QUAL-202: Re-add sims.ini change after merge

--- a/src/qual/config/sims.ini
+++ b/src/qual/config/sims.ini
@@ -27,6 +27,7 @@ ifeVmQtaAddr = tcp://192.168.122.2:50003
 
 [CarrierCardData]
 ;ethDevice = TEST_FILE
+ethtoolMagic = 0x15218086
 
 [Ethernet]
 port8Device = enp2s0f0
