--- a/src/qual/config/mps.ini
+++ b/src/qual/config/mps.ini
@@ -33,6 +33,9 @@ ifeVmQtaAddr = tcp://192.168.122.2:50003
 ;port8Device = eno1
 ;bandwidthSpeed = 100
 
+[GPIO]
+ifeVmGpioAddr = tcp://192.168.122.2:50010
+
 [HDAudio]
 ;audioFilePath = qual/modules/hdAudio/HDAudio
 
