--- a/src/qual/config/sims.ini
+++ b/src/qual/config/sims.ini
@@ -33,6 +33,9 @@ ethtoolMagic = 0x15218086
 port8Device = enp2s0f0
 ;bandwidthSpeed = 100
 
+[GPIO]
+ifeVmGpioAddr = tcp://192.168.122.2:50010
+
 [HDAudio]
 ;audioFilePath = qual/modules/hdAudio/HDAudio
 
@@ -60,4 +63,4 @@ port8Device = enp2s0f0
 
 [SSD]
 ;formatRAID = True
-partitionsize = 20
+partitionsize = 5
