--- a/src/config/GNMS.conf
+++ b/src/config/GNMS.conf
@@ -3,5 +3,5 @@
 ;syslogAddress = localhost
 ;syslogPort = 514
 ;syslogProtocol = udp
-;switchaddress = 10.10.41.159
+;switchAddress = 10.10.41.159
 
