--- a/src/qual/config/ife.ini
+++ b/src/qual/config/ife.ini
@@ -10,8 +10,12 @@ gpbServiceAddress = tcp://*:50003
 jsonServiceAddress = tcp://*:50004
 moduleDir = qual.ifeModules
 
-[ARINC485]
+[IFEARINC485]
 ;baudrate = 9600
 ;parity = N
 ;stopbits = 1
 ;bytesize = 8
+
+[IFEAnalogAudio]
+;commandDelay = 0.25
+
