QUAL-281: Added ethernet device config to NMS config files

--- a/src/config/GNMS.conf
+++ b/src/config/GNMS.conf
@@ -3,5 +3,7 @@
 ;syslogAddress = localhost
 ;syslogPort = 514
 ;syslogProtocol = udp
-;switchAddress = 10.10.41.159
 
+switchAddress = 10.10.41.159
+cpuEthernetDev = eno1
+i350EthernetDev = ens1f
