QUAL-286 : Updated spec and service files

--- a/src/nms/systemd/GNMS.service
+++ b/src/nms/systemd/GNMS.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=Guest Network Management Service
+Wants=local-fs.target
+After=local-fs.target network.target
 
 [Service]
 Type=notify
