QUAL-323 ATP LED Control

--- a/src/common/proto/Makefile
+++ b/src/common/proto/Makefile
@@ -11,6 +11,7 @@ all:
 	$(PROTOC) --python_out=../pb2 SEMA.proto
 	$(PROTOC) --python_out=../pb2 rtc_driver.proto
 	$(PROTOC) --python_out=../pb2 common_nm.proto
+	$(PROTOC) --python_out=../pb2 led_control.proto
 
 clean:
 	rm ../pb2/*_pb2.py 2>/dev/null || true
