QUAL-324: Sims packages sets up simulated inventory data for HDDS

--- a/src/systemd/qual-sims.service
+++ b/src/systemd/qual-sims.service
@@ -1,8 +1,9 @@
 [Unit]
 Description=Start QUAL simulators
+Before=HDDS.service
 
 [Service]
-Type=idle
+Type=oneshot
 ExecStart=/thales/host/appliances/qual-sims
 RemainAfterExit=yes
 Restart=always
