--- a/src/config/qual.conf
+++ b/src/config/qual.conf
@@ -4,7 +4,9 @@
 ;syslogPort = 514
 ;syslogProtocol = udp
 ifeVmQtaAddr = tcp://192.168.122.2:50003
-
+switchAddress = 10.10.41.159
+cpuEthernetDev = eno1
+i350EthernetDev = ens1f
 
 [QualTestApp]
 ;gpbServiceAddress = tcp://*:50001
