QUAL-325: Updated i350EthernetDev config to use common key

--- a/src/config/qual.conf
+++ b/src/config/qual.conf
@@ -5,16 +5,15 @@
 ;syslogProtocol = udp
 ifeVmQtaAddr = tcp://192.168.122.2:50003
 switchAddress = 10.10.41.159
-cpuEthernetDev = eno1
-i350EthernetDev = ens1f
+cpuEthernetDev = enp4s0
+i350EthernetDev = enp1s0f
 
 [QualTestApp]
 ;gpbServiceAddress = tcp://*:50001
 ;jsonServiceAddress = tcp://*:50002
 ;moduleDir = qual.modules
 
-[CarrierCardData]
-;ethDevice = TEST_FILE
+[CarrierCardInventory]
 ethtoolMagic = 0x15218086
 
 [Ethernet]
