QUAL-375: Changed CPU Ethernet device name for new HW/kernel

--- a/src/config/qual-mps.conf
+++ b/src/config/qual-mps.conf
@@ -5,7 +5,7 @@
 ;syslogProtocol = udp
 ifeVmQtaAddr = tcp://192.168.122.2:50003
 switchAddress = 192.168.1.1
-cpuEthernetDev = eno1
+cpuEthernetDev = enp0s31f6
 i350EthernetDev = ens1f
 
 [QualTestApp]
@@ -17,7 +17,6 @@ i350EthernetDev = ens1f
 ;ethtoolMagic = 0x15238086
 
 [Ethernet]
-;port8Device = eno1
 ;bandwidthSpeed = 100
 
 [HDAudio]
