--- a/src/nms/config/GNMS.conf
+++ b/src/nms/config/GNMS.conf
@@ -4,6 +4,6 @@
 ;syslogPort = 514
 ;syslogProtocol = udp
 
-switchAddress = 10.10.41.159
-cpuEthernetDev = eno1
+switchAddress = 192.168.1.1
+cpuEthernetDev = enp0s31f6
 i350EthernetDev = ens1f
