--- a/src/config/qual-mps.conf
+++ b/src/config/qual-mps.conf
@@ -5,6 +5,9 @@
 ;syslogProtocol = udp
 ifeVmQtaAddr = tcp://192.168.122.2:50003
 switchAddress = 192.168.1.1
+tftpServer = 192.168.1.122
+switchUser = admin
+switchPassword = ""
 cpuEthernetDev = enp0s31f6
 i350EthernetDev = ens1f
 
