--- a/src/config/qual.conf
+++ b/src/config/qual.conf
@@ -5,6 +5,9 @@
 ;syslogProtocol = udp
 ifeVmQtaAddr = tcp://192.168.122.2:50003
 switchAddress = 10.10.41.159
+;tftpServer = 10.10.41.160
+;switchUser = admin
+;switchPassword = ""
 cpuEthernetDev = enp4s0
 i350EthernetDev = enp1s0f
 
