QUAL-322 Firmware upgrade and swap

--- a/src/config/qual-mps.conf
+++ b/src/config/qual-mps.conf
@@ -50,3 +50,7 @@ localecho = True
 [SSD]
 ;formatRAID = True
 ;partitionsize = 100
+
+[FirmwareUpdate]
+;firmPath=Thales-MPS-090.dat
+;configPath=secondary-config
