--- a/src/config/qual.conf
+++ b/src/config/qual.conf
@@ -50,3 +50,7 @@ ethtoolMagic = 0x15218086
 [SSD]
 ;formatRAID = True
 partitionsize = 20
+
+[FirmwareUpdate]
+;firmPath=Thales-MPS-090.dat
+;configPath=secondary-config
