QUAL-288 : Updated config file

--- a/src/nms/config/GNMS.conf
+++ b/src/nms/config/GNMS.conf
@@ -3,11 +3,11 @@
 ;syslogAddress = localhost
 ;syslogPort = 514
 ;syslogProtocol = udp
-
-service_address=tcp://*:40006
-service_prvkey_file=/thales/host/config/zmq/MAP_hostsrv_zmq.prv
-client_pubkeys_dir=/thales/host/runtime/zmq-auth/NMS/
-
 switchAddress = 192.168.1.1
 cpuEthernetDev = enp0s31f6
 i350EthernetDev = ens1f
+
+[server_config]
+service_address=tcp://192.168.1.4:40006
+service_prvkey_file=/thales/host/config/zmq/MAP_hostsrv_zmq.prv
+client_pubkeys_dir=/thales/host/runtime/zmq-auth/NMS/
