--- a/src/nms/config/HNMS.conf
+++ b/src/nms/config/HNMS.conf
@@ -5,6 +5,8 @@
 ;syslogProtocol = udp
 
 switchAddress = 192.168.1.1
+;switchUser = admin
+;switchPassword = ""
 cpuEthernetDev = enp0s31f6
 i350EthernetDev = ens1f
 tftpServerPath = /thales/qual/firmware/
