QUAL-460 IP addresses setup for production environment

--- a/src/nms/config/HNMS.conf
+++ b/src/nms/config/HNMS.conf
@@ -4,7 +4,8 @@
 ;syslogPort = 514
 ;syslogProtocol = udp
 
-switchAddress = 192.168.1.1
+serviceAddress=ipc:///169.254.1.2/nms.sock
+switchAddress = 169.254.1.1
 switchUser = admin
 switchPassword = ""
 cpuEthernetDev = enp0s31f6
